# FastHumanDetection

./: CMakeLists.txt  README
amf/: CMakeLists.txt  adaptive_manifold_filter.cpp  adaptive_manifold_filter.h
bg_sub/: BGS.h  BackgroundSubtractionAPI.h  CMakeLists.txt  LocalBinaryPattern.cpp  LocalBinaryPattern.h  MultiLayerBGS.cpp  MultiLayerBGS.h
blob/: BlobExtraction.cpp  BlobResult.cpp  CMakeLists.txt  blob.cpp
common/: FileList.cpp
cross_bf/: cross_bilateral_filter.cpp  fast_lbf.h  math_tools.h
human_det/: CMakeLists.txt
main/: CMakeLists.txt  bgsub.cpp  human_detect.cpp  utilities.h
